src/ProjectRoadmap/components/Gantt/Gantt.css
.gantt-container {
    height: 100%;
}

.gantt-id-lookup {
    width: 100px;
    padding-top: 1px;
    padding-right: 16px;
    border-right: 1px solid #f2f2f2;
}

.gantt-buttons {
    border-right: 1px solid #f2f2f2;
    padding-right: 16px;
}

.gantt-zoomin {
    padding-left: 50px;
}

.gantt-chart-holiday {
    background: #f4f7f4 !important;
}

/**
 * Quick Info
 */
.gantt_cal_qi_content li {
    list-style: inherit;
}

.gantt_cal_quick_info {
    width: 550px;
}

div.gantt-qi-description {
    max-width: 540px;
    max-height: 300px;
    overflow: auto;
}

/**
 * Gantt Table
 */
.gantt-symbol {
    content: "";
    padding-right: 5px;
    margin: 0.5em 5px;
}

/**
 * Gantt Chart
 */
.gantt-estimated {
    border-style: dashed !important;
    border-width: 2px;
    border-color: black !important;
}

.gantt_cal_qi_tcontent {
    white-space: pre-wrap;
}

